<resources>
    <string name="app_name">Dunstan</string>
    <string name="app_first_step_up">First Time Setup</string>
    <string name="global_door_name">Door\nName</string>
    <string name="add">Add</string>
    <string name="app_password">App Password:</string>
    <string name="door_code">Door Code:</string>
    <string name="security_question">Please answer your three\nsecurity questions below:</string>
    <string name="door_phone_no">Door Phone No:</string>
    <string name="email_address">Email Address:</string>
    <string name="door_name">Door Name:</string>
    <string name="question1">Security Question 1</string>
    <string name="question2">Security Question 2</string>
    <string name="question3">Security Question 3</string>
    <string name="continue_string">Continue</string>
    <string name="select_door">Select Door</string>
    <string name="administrator">Administrator</string>
    <string name="manage_door">Manage Doors</string>
    <string name="alerts">Alerts</string>
    <string name="support">Support</string>
    <string name="faq">FAQ</string>
    <string name="website">Website</string>
    <string name="settings">Settings</string>
    <string name="login_info">Please enter your information</string>
    <string name="phone_number">Phone number:</string>
    <string name="password">Password:</string>
    <string name="login">Log In</string>
    <string name="door_list">Door List</string>
    <string name="block_gsm">Block GSM</string>
    <string name="new_user">New User</string>
    <string name="yes">Yes</string>
    <string name="No">No</string>
    <string name="user_list">User List</string>
    <string name="delete_user">Delete User</string>
    <string name="first_name">First Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="email">Email</string>
    <string name="delete">Delete</string>
    <string name="update_email">Update Email Address</string>
    <string name="update_password">Update Password</string>
    <string name="factory_reset">Factory Reset</string>
    <string name="support_phone_no">Support Phone No:</string>
    <string name="press_to_call">Press to Call</string>
    <string name="or_email">or email:</string>
    <string name="internal_keypad">Internal Keypad On/Off</string>
    <string name="external_keypad">External Keypad On/Off</string>
    <string name="remote_control">Remote Control On/Off</string>
    <string name="keypad_tamper">Keypad tamper On/Off</string>
    <string name="gsm_attempt">GSM Attempt On/Off</string>
    <string name="mains_power">Mains Power On/Off</string>
    <string name="low_battery">Low Battery On/Off</string>
    <string name="door_error">Door Error On/Off</string>
    <string name="bell_on">Bell On/Off</string>
    <string name="add_door">Add Door</string>
    <string name="delete_door">Delete Door</string>
    <string name="door_status">Door Status:</string>
    <string name="press_door_status">Press for Door Status</string>
    <string name="save">Save</string>
    <string name="old_email">Old Email:</string>
    <string name="new_email">New Email:</string>
    <string name="confirm">Confirm:</string>
    <string name="old_password">Old Password:</string>
    <string name="new_password">New Password:</string>
</resources>
