<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mobidev.com.dunstan.FirstSetupActivity"
    android:background="@android:color/white">

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        app:srcCompat="@drawable/logo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:id="@+id/app_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_logo"
        app:srcCompat="@drawable/underline_title"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true"
        android:layout_marginRight="0dp"
        android:layout_marginLeft="0dp"
        android:scaleType="fitXY"/>

    <ImageView
        android:id="@+id/bottom"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:srcCompat="@drawable/bottom"
        android:layout_marginBottom="0dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:id="@+id/app_lock"
        android:layout_width="30dp"
        android:layout_height="40dp"
        app:srcCompat="@drawable/lock"
        android:layout_above="@+id/bottom"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="15dp" />

    <TextView
        android:id="@+id/door_name"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:text="@string/global_door_name"
        android:textColor="@android:color/black"
        android:gravity="center"
        android:background="@drawable/rounded_corner"
        android:layout_above="@+id/bottom"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="15dp"/>

    <TextView
        android:id="@+id/door_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/select_door"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/administrator_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/door_name_label"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/administrator"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/manage_door_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/administrator_label"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/manage_door"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/alert_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/manage_door_label"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/alerts"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/support_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/alert_label"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/support"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/faq_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/support_label"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/faq"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/website_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/faq_label"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:textAlignment="center"
        android:text="@string/website"
        android:textColor="@android:color/black"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/setting_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/website_label"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/settings"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="20dp" />

</RelativeLayout>
